f3 fixed wrong position of fullscreen button

--- a/src/components/Map/map.module.sass
+++ b/src/components/Map/map.module.sass
@@ -72,3 +72,9 @@
   left: 50%
   text-align: center
   transform: translate(-50%, -50%)
+
+.fullscreen
+  top: 10px
+  left: 10px
+  width: 29px
+  position: absolute
